<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickBill</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_title_login">登录</string>
    <string name="tv_title_pin">Pin码设置</string>
    <string name="tv_title_regist">注册</string>
    <string name="tv_load_data">正在请求服务器...</string>
    <string name="tv_item_name">品名</string>
    <string name="tv_item_num">数量</string>
    <string name="tv_item_price">单价</string>
    <!-- Bill状态 -->
    <string-array name="bill_state">
        <item>已保存</item>
        <item>已提交</item>
        <item>待支付</item>
        <item>已支付</item>
        <item>完结</item>
    </string-array>
	<string name="ui_plv_header_hint_normal">下拉刷新</string>
    <string name="ui_plv_header_hint_ready">松开刷新数据</string>
    <string name="ui_plv_header_hint_loading">正在加载...</string>
    <string name="ui_plv_header_last_time">上次更新时间：</string>
    <string name="ui_plv_footer_hint_normal">查看更多</string>
    <string name="ui_plv_footer_hint_no_more">无更多数据</string>
    <string name="ui_plv_footer_hint_ready">松开载入更多</string>
    <string name="bill_saved">已保存</string>
    <string name="bill_commited">已提交</string>
    <string name="bill_paying">待支付</string>
    <string name="bill_paid">已支付</string>
    <string name="bill_finished">完结</string>
    <!-- Welcome界面 -->
    <string name="tv_title_welcome">Welcome</string>
    <!--
    <string name="gv_txt_1">To Do</string>
    <string name="gv_txt_2">SchedulePayment</string>
    <string name="gv_txt_3">  Set Up Company</string>
    <string name="gv_txt_4">  View  Balance</string>
    -->
    <string name="gv_txt_1">记一笔</string>
    <string name="gv_txt_2">付款</string>
    <string name="gv_txt_3">公司设置</string>
    <string name="gv_txt_4">余额</string>
    <string name="tv_bottom_welcome">同步其他设备?</string>
    
    <string name="et_pin_hint">输入pin码</string>
    <!-- 提示信息 -->
    <string name="err_no_network">无服务，请检测您的网络</string>
    <string name="err_phone_empty">手机号不能为空</string>
    <string name="err_vercode_empty">验证码不能为空</string>
    <string name="err_vercode_error">验证码不正确</string>
    <string name="err_vercode_type_error">验证码格式错误</string>
    <string name="err_pwd_error">密码错误</string>
    <string name="err_pin_empty">Pin码不能小于6位字符</string>
    <string name="err_pin_error">Pin码不正确,请重新输入,剩余尝试NUM次,错误超过5次账户将锁定</string>
    <string name="err_pin_lock">PIN码已失效,请用户名密码登陆重置PIN码</string>
    <string name="err_user_lock">错误超过5次,账户已锁定联系管理员</string>
    <string name="err_server_error">服务器异常</string>
    <string name="err_send_failed">发送失败,稍后重试</string>
    <string name="err_unknow">未知错误</string>
    <!-- 按钮信息 -->
    <string name="btn_request_code">获取验证码</string>
    <string name="btn_request_recode">后可再次获取</string>
    <string name="btn_change_phone"></string>
    <string name="btn_skip_guide">跳过此步</string>
    <string name="btn_other_login">其他方式登录</string>
    <string name="btn_next_guide">下一步</string>
    <!-- Other -->
    <string name="bt_add_bill">新建Bill</string>
    <string name="bt_see_bill">查看Bill</string>
    <string name="str_request_code">请求验证码</string>
    <string name="str_regist">注册</string>
    <string name="str_signin">登录</string>
    <string name="str_pin_set">PIN设置</string>
    <string name="str_more_set">设置</string>
    <string name="tv_set_pin_tiggle">PIN开关</string>
    <string name="str_pin_verify">PIN验证</string>
    <string name="str_bt_bank">选择银行</string>
    <string name="str_bt_company_info">公司信息</string>
    <string name="str_bt_quick_start">快速开始</string>
    <string name="str_bt_submit">提交</string>
    <string name="str_forgot_psd">忘记密码？</string>
    <string name="str_remem_user">记住用户名</string>
    <string name="str_ev_user">手机号/Email</string>
    <string name="str_ev_pass">请输入密码</string>
    <string name="str_ev_repass">请确认密码</string>
    <string name="str_ev_msgcode">短信验证码</string>
    <string name="str_send_success">发送成功</string>
    <string name="str_send_failure">发送失败</string>
    <string name="str_server_error">服务器异常</string>
    <string name="str_send_failed">发送失败,稍后重试</string>
    <string name="str_regist_success">注册成功</string>
    <string name="str_tv_welcome_title">欢迎使用！</string>
    <string name="str_tv_welcome_content">开始吧 ！Step1.设置您公司的银行帐户 , 同步
 公司基本信息</string>
    <string name="str_tv_pin_content">设置Pin密码后，他人在使用您的手机时无法进入系统</string>
    <string name="str_tv_pin_content_login">设置Pin密码后，他人在使用您的手机时无法进入系统</string>
    <string name="str_quick_add">快速添加</string>
    <string name="tv_nodata">无数据</string>
    <!-- tab标签显示内容 -->
    <string name="tab_left">首页</string>
    <string name="tab_camera">拍照</string>
    <string name="tab_center">快速创建</string>
    <string name="tab_right">更多</string>
    <string name="tab_back">返回</string>
    <string name="tab_next">下一步</string>
    <string name="tab_quick_add">快速添加</string>
    <string name="load_error">加載錯誤</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="Send">Save &#038;Send for Approval</string>
    <string name="title_activity_company_inf">CompanyInf</string>
    <string name="SeeVenders">See Venders</string>
    <!-- company显示内容 -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="com_name">请输入公司名称</string>
    <string name="com_phone">请输入公司联系方式</string>
    <string name="com_adress">请选择地址</string>
    <string name="com_emill">请输入公司邮箱</string>
    <string name="com_notes">备注</string>
    <string name="title_activity_recurring__invoice">Recurring_Invoice</string>
    <string name="repeats">Repeats:</string>
    <string name="enery">Enery :</string>
    <string name="month">Month</string>
    <string name="rpeat">Rpeat on :</string>
    <string name="starts">Starts on :</string>

</resources>