<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:orientation="vertical"
    >
    <EditText
        android:layout_marginTop="20dip"
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ev_user"
        android:hint="@string/str_ev_user" />
    <EditText
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ev_pass"
        android:id="@+id/et_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_ev_pass" />
	<Button
	    	android:layout_margin="10dp"
	    	android:layout_gravity="center_horizontal"
	  	    android:background="@drawable/btn_bottom_bg"
        	android:text="@string/tv_title_login"
        	android:id="@+id/btn_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:id="@+id/tv_forget_pwd_login"
	    android:text="@string/str_forgot_psd"
	    />
</LinearLayout>