<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="5dip"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/str_tv_welcome_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/str_tv_welcome_content" />

    <GridView
        android:layout_marginTop="15dip"
        android:id="@+id/gv_home"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:numColumns="auto_fit"
        android:gravity="center"
        android:horizontalSpacing="10dip"
        android:verticalSpacing="10dip"
        >
    </GridView>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
         >

        <TextView
            android:id="@+id/tv_bottom_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bottom_welcome" />

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_bottom_welcome"
             >

            <TextView
                android:id="@+id/tv_link_signin"
                android:textColor="@color/txt_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_signin" />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="|"
                />
            <TextView
                android:textColor="@color/txt_link"
                android:id="@+id/tv_link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_regist" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>