<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecurringInvoice" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/repeats"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/repeats" />

        <Spinner
            android:id="@+id/Spinner"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:src="@drawable/bl_button_d" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/eaery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/enery" />

        <EditText
            android:id="@+id/Interval"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:src="@drawable/bl_button_d" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/month" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rpeat"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/rpeat" />

        <RadioGroup
            android:id="@+id/ataawGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rpeat"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radiobtn1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Day of the month" />

            <RadioButton
                android:id="@+id/radiobtn2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Day of the month" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/repeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starts" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.81"
            android:src="@drawable/bl_button_d" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="Ends" />

        <RadioGroup
            android:id="@+id/ataawGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text2"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radiobtnon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Never" />

            <RadioButton
                android:id="@+id/radiobtntw"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="After" />

            <RadioButton
                android:id="@+id/radiobtnth"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="On" />
        </RadioGroup>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text2"
            android:gravity="center_vertical"
            android:text="Occurences" />

        <EditText
            android:id="@+id/endOnTimes"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/text2"
            android:layout_toLeftOf="@+id/text3"
            android:ems="10"
            android:hint="11111111111" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/endOnTimes"
            android:layout_toLeftOf="@+id/text3"
            android:hint="11111111111" />
    </RelativeLayout>

    <Button
        android:id="@+id/schedulebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Schedule It" />

</LinearLayout>